<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="700dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:orientation="vertical" tools:ignore="MissingConstraints" android:id="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp" android:layout_marginRight="1dp">

        <ImageView
                android:id="@+id/icon"
                android:layout_height="100dp"
                android:contentDescription="@string/desc_firebase_lockup"
                android:src="@drawable/firebase_lockup_400" android:layout_width="200dp"/>


        <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/facebook_title_text"
                android:theme="@style/ThemeOverlay.MyTitleText"/>

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/com_facebook_profile_picture_blank_square"
                android:visibility="visible"
                tools:visibility="gone"/>

        <TextView
                android:id="@+id/status"
                style="@style/ThemeOverlay.MyTextDetail"
                android:text="@string/signed_out"/>

        <TextView

                android:id="@+id/detail"
                style="@style/ThemeOverlay.MyTextDetail"
                tools:text="Firebase User ID: 123456789abc"/>

        <Button

                android:id="@+id/buttonFacebookSignout"

                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="match_parent"

                android:layout_height="40dp"

                android:layout_centerInParent="true"

                android:text="@string/sign_out"

                android:theme="@style/ThemeOverlay.MyDarkButton"

                android:visibility="gone"/>

        <com.facebook.login.widget.LoginButton

                android:id="@+id/buttonFacebookLogin"

                android:layout_width="match_parent"

                android:layout_height="40dp"

                android:layout_centerInParent="true"/>
        <com.google.android.gms.common.SignInButton

                android:id="@+id/signInButton"

                android:layout_width="match_parent"

                android:layout_height="40dp"

                android:layout_centerInParent="true"

                android:visibility="visible"

                tools:visibility="gone" />


    </LinearLayout>

    <LinearLayout

            android:id="@+id/signOutAndDisconnect"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_centerInParent="true"

            android:orientation="horizontal"

            android:paddingLeft="16dp"

            android:paddingRight="16dp"

            android:visibility="gone"

            tools:visibility="visible" tools:ignore="MissingConstraints" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="590dp">


        <Button
                android:id="@+id/signOutButton"

                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="0dp"

                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:text="@string/sign_out"

                android:theme="@style/ThemeOverlay.MyDarkButton"/>


        <Button

                android:id="@+id/disconnectButton"

                style="@style/Widget.AppCompat.Button.Colored"

                android:layout_width="0dp"

                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:text="@string/disconnect"

                android:theme="@style/ThemeOverlay.MyDarkButton"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>